--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,10 @@
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+        <action
+            android:id="@+id/action_SecondFragment_to_Third"
+            app:destination="@+id/Third"
+            />
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
@@ -24,5 +28,12 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
+
     </fragment>
+<fragment
+    android:id="@+id/Third"
+    android:name="com.example.taskmaster.ThirdFragment"
+    android:label="Third Fragment label"
+    tools:layout="@layout/fragment_third"
+    />
 </navigation>
